# standup-as-a-service

./: .gitignore  0001-feat-x86.patch  README.md
.github/workflows/: data-extractor.yaml
.zed/: settings.json
cluster/: README.md  Standup-1734058465326.json  helmfile.yaml  mongodb.yaml  redis.yaml
data-extractor/: Dockerfile  entrypoint.sh  queue.py  skaffold.yaml
data-extractor/helm/: Chart.yaml  values.yaml
data-extractor/helm/templates/: configmap.yaml  cronjob.yaml  secret.yaml
feature-flags/: .dockerignore  Cargo.toml  Dockerfile  skaffold.yaml
feature-flags/helm/: Chart.yaml  values.yaml
feature-flags/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
feature-flags/src/: main.rs
listener/: Cargo.toml  Dockerfile  skaffold.yaml
listener/helm/: Chart.yaml  values.yaml
listener/helm/templates/: _helpers.tpl  deployment.yaml
listener/src/: main.rs
standup-api/: Cargo.toml  Dockerfile  skaffold.yaml
standup-api/helm/: Chart.yaml  values.yaml
standup-api/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
standup-api/helm/templates/tests/: test-connection.yaml
standup-api/src/: main.rs
standup-operator/: Makefile  PROJECT  watches.yaml
standup-operator/config/crd/: kustomization.yaml
standup-operator/config/default/: kustomization.yaml  metrics_service.yaml
standup-operator/config/manager/: kustomization.yaml  manager.yaml
standup-operator/config/manifests/: kustomization.yaml
standup-operator/config/prometheus/: monitor.yaml
standup-operator/config/rbac/: kustomization.yaml  leader_election_role.yaml  (+6 more)
(+7 files in other folders)
