[package]
name = "standup-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
env_filter = "0.1.2"
futures = "0.3.31"
mongodb = "3.1.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
